--- a/src/components/argostyle.css
+++ b/src/components/argostyle.css
@@ -4,23 +4,25 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    background-color: rgba(243, 240, 240, 0.3);
 }
 
 .ArgoContainer-form {
-    margin: 15px;
+    margin: 30px auto;
     height: auto;
     padding: 15px;
-    background-color: lightpink;
-}
-
-.ArgoContainer-form h3 {
-    display: flex;
-    margin: 15px;
+    width: 90%;
+    border-radius: 15px;
+    background-color: #FFFEFE;
 }
 
 .ArgoContainer-form button {
     margin: 15px;
     padding: 5px 15px;
+    width: 20%;
+    color: rgb(247, 108, 108);
+    background-color: #FFFEFE;
+    border-radius: 5px;
 }
 
 .ArgoContainer-addArgo {
@@ -28,29 +30,25 @@
 }
 
 .ArgoContainer-addArgo label {
-    margin: auto 15px;
+    margin: auto 5px;
 }
 
 .ArgoContainer-addArgo input {
-    margin: auto 15px;
+    margin: auto 5px;
 }
 /* ArgoList */
 
 .ArgoList-container {
-    margin: 15px;
+    margin: 15px auto;
     height: auto;
     padding: 15px;
-    background-color: lightpink;
+    width: 90%;
+    border-radius: 15px;
 }
 
 .ArgoList {
     display: flex;
     flex-direction: column;
-}
-
-.ArgoList h3 {
-    display: flex;
-    margin: 15px;
 }
 
 /* ArgoMembers */
@@ -59,13 +57,15 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    margin: 15px auto;
 }
 
 .ArgoMembers div {
     margin: 15px;
     width: 50%;
     padding: 30px;
-    background-color:lawngreen;
+    border-radius: 15px;
+    background-color: #FFFEFE;
 }
 
 .ArgoMembers p {
