--- a/src/components/foothead.css
+++ b/src/components/foothead.css
@@ -1,3 +1,5 @@
+/* Header */
+
 .Header {
     width: 100%;
     height: 350px;
@@ -33,3 +35,33 @@
     position: inherit;
     z-index: 1;
 }
+
+/* Footer */
+
+.Footer {
+    background-color: rgba(247, 108, 108, 0.7);
+    width: 100%;
+    height: 100px;
+    color: whitesmoke;
+}
+
+.Footer p {
+    padding: 30px 15px 0 15px;
+    margin: 0;
+}
+
+.Footer-ref {
+    display: flex;
+    justify-content: end;
+    margin: 0 30px;
+}
+
+a:link, a:visited {
+    color: whitesmoke;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  a:link:active, a:visited:active {
+    color: whitesmoke;
+  }
